--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <ScrollView
-        android:id="@+id/scrollView3"
+        android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,7 +21,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/conversionTypeLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
@@ -53,7 +53,7 @@
                 tools:ignore="DuplicateSpeakableTextCheck" />
 
             <Spinner
-                android:id="@+id/spinner2"
+                android:id="@+id/inputUnitSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
@@ -61,7 +61,7 @@
                 android:minHeight="48dp" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/outputTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
@@ -71,7 +71,7 @@
                 android:textSize="48sp" />
 
             <Spinner
-                android:id="@+id/spinner3"
+                android:id="@+id/outputSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp"
@@ -79,7 +79,7 @@
                 android:minHeight="48dp" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/convertButton"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:insetTop="0dp"
